<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backgroundLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.xamarin.azuredevdays.MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:paddingTop="20dp"
        android:id="@+id/sentimentText"
        android:background="@drawable/editext_drawable"
        android:lines="20"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="Hello World!"
        android:padding="10dp"/>

    <Button
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_drawable"
        android:id="@+id/getSentimentButton"
        android:layout_width="150dp"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="Submit"/>

    <TextView
        android:paddingTop="30dp"
        android:alpha="1"
        android:id="@+id/emojiView"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="120dp"/>

    <Button
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_drawable"
        android:id="@+id/sendCrashButton"
        android:layout_width="150dp"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="Send a sample crash"/>

    <LinearLayout
        android:paddingTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >

        <Button
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_drawable"
            android:id="@+id/sendEventButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="Send a sample event"/>

        <Button
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_drawable"
            android:id="@+id/sendColorButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="Send event with color property"/>
    </LinearLayout>
</LinearLayout>
